# baxter_ws

./: README.md
src/: .rosinstall  .rosinstall.bak  Baxter SDK&Simulator_Dependencies.md  README.odt
src/baxter/baxter_playfile_nodes/src/: baxter_multitraj_player.cpp  baxter_playfile_service.cpp
src/cartesian_planner/: CMakeLists.txt  README.md
src/coordinator/: CMakeLists.txt  README.md
src/coordinator/launch/: baxter_vision_manip.launch  baxter_vision_manip_w_client.launch
src/coordinator/src/: acquire_block_client.cpp  command_bundler.cpp  dropoff_block_client.cpp
src/object_grabber/: README.md
